fix: Проблема с collapse

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -226,6 +226,6 @@ input:autofill {
 		}
 	}
 }
-.collapse:not(.show) {
+.catalog-menu .collapse:not(.show) {
 	display: none !important;
 }
